registration neu einstellen

--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://role_b705d26b2:ypU_Zc8CR1yIdE1pma1pyCTC6yNgV_S9@db-b705d26b2.db003.hosteddb.reai.io:5432/b705d26b2?connect_timeout=15"
+DATABASE_URL="postgresql://neondb_owner:npg_xILHWw9iRt1h@ep-little-frost-ag0jov82-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 NEXTAUTH_SECRET="JZKYSvnnJ1nORLNZlbL5PHsOwzgk00Ln"
