--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,7 @@
-{}
+{
+  "buildCommand": "cd nextjs_space && npm install && npm run build",
+  "devCommand": "cd nextjs_space && npm run dev",
+  "installCommand": "cd nextjs_space && npm install",
+  "framework": null,
+  "outputDirectory": "nextjs_space/.next"
+}
