--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "npx prisma generate"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts"
@@ -23,7 +23,6 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.30",
-    "prisma": "6.7.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.7",
@@ -120,7 +119,8 @@
     "webpack": "5.99.5",
     "yup": "1.3.0",
     "zod": "3.23.8",
-    "zustand": "5.0.3"
+    "zustand": "5.0.3",
+    "prisma": "^6.7.0"
   },
   "browserslist": [
     "ie >= 11",
