--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -22,10 +22,7 @@
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "8.4.30",
     "tailwind-merge": "2.5.2",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "1.0.7",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
     "typescript": "5.2.2"
@@ -120,7 +117,10 @@
     "yup": "1.3.0",
     "zod": "3.23.8",
     "zustand": "5.0.3",
-    "prisma": "^6.7.0"
+    "prisma": "^6.7.0",
+    "postcss": "8.4.30",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "1.0.7"
   },
   "browserslist": [
     "ie >= 11",
