--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -65,7 +65,7 @@
     "@tanstack/react-query": "5.0.0",
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
-    "@types/nodemailer": "^7.0.4",
+    "@types/nodemailer": "^6.4.21",
     "@types/plotly.js": "2.35.5",
     "@types/react-plotly.js": "2.6.3",
     "autoprefixer": "10.4.15",
@@ -93,8 +93,10 @@
     "next": "14.2.28",
     "next-auth": "4.24.11",
     "next-themes": "0.3.0",
-    "nodemailer": "^7.0.12",
+    "nodemailer": "^6.10.1",
     "plotly.js": "2.35.3",
+    "postcss": "8.4.30",
+    "prisma": "^6.7.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.3.0",
     "react-datepicker": "6.1.0",
@@ -112,15 +114,13 @@
     "sonner": "1.5.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "1.0.7",
     "vaul": "0.9.9",
     "webpack": "5.99.5",
     "yup": "1.3.0",
     "zod": "3.23.8",
-    "zustand": "5.0.3",
-    "prisma": "^6.7.0",
-    "postcss": "8.4.30",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "1.0.7"
+    "zustand": "5.0.3"
   },
   "browserslist": [
     "ie >= 11",
