Feature: Cloud Storage initialisiert + Alle Tickets Dario zugeordnet
- Cloud Storage (S3) für Profilbild-Upload konfiguriert
- Script erstellt: Alle 10 Tickets/Projekte Dario Schnyder zugeordnet
- Profil-Speicherfunktion erfolgreich getestet:
  * Name-Änderung funktioniert
  * E-Mail-Benachrichtigungen-Toggle funktioniert
  * Änderungen bleiben nach Seiten-Reload erhalten

--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,2 +1,6 @@
 DATABASE_URL="postgresql://neondb_owner:npg_xILHWw9iRt1h@ep-little-frost-ag0jov82-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 NEXTAUTH_SECRET="JZKYSvnnJ1nORLNZlbL5PHsOwzgk00Ln"
+AWS_PROFILE=hosted_storage
+AWS_REGION=us-west-2
+AWS_BUCKET_NAME=abacusai-apps-16bc3ae7f4b9dc965e5c6688-us-west-2
+AWS_FOLDER_PREFIX=18111/
