--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -34,7 +34,7 @@
     "@headlessui/react": "1.7.18",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -69,7 +69,7 @@
     "@types/plotly.js": "2.35.5",
     "@types/react-plotly.js": "2.6.3",
     "autoprefixer": "10.4.15",
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "^3.0.3",
     "chart.js": "4.4.9",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
