--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -4,3 +4,17 @@ AWS_PROFILE=hosted_storage
 AWS_REGION=us-west-2
 AWS_BUCKET_NAME=abacusai-apps-16bc3ae7f4b9dc965e5c6688-us-west-2
 AWS_FOLDER_PREFIX=18111/
+
+# E-Mail-Benachrichtigungen (SMTP-Konfiguration)
+# Für Gmail: smtp.gmail.com, Port 587, App-Passwort verwenden
+# Für Outlook: smtp-mail.outlook.com, Port 587
+# Für andere: Eigenen SMTP-Server konfigurieren
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM=your-email@gmail.com
+
+# Optional: Firmenname und Farben für E-Mail-Templates
+COMPANY_NAME=planbar
+PRIMARY_COLOR=#3b82f6
