Feature: Zwei E-Mail-Konten für Login & Updates
SMTP-Konfiguration:
- noreply@planbar.dev: Ticket/Subtask + Login-Benachrichtigungen
- update@planbar.dev: Tägliche/Wöchentliche Updates
- Alle Credentials in .env konfiguriert
- .env.example für Deployment erstellt

Login-Benachrichtigungen:
- Automatisch bei jedem erfolgreichen Login
- Versendet von noreply@planbar.dev (SMTP_LOGIN_*)
- Enthält: Zeitpunkt, IP, Geräteinfo, Sicherheitshinweis
- Implementiert in lib/auth.ts (JWT Callback)

Update-E-Mails:
- Tägliche/Wöchentliche Zusammenfassungen
- Versendet von update@planbar.dev (SMTP_UPDATE_*)
- Enthält: Statistiken, fällige Tasks, neue Zuweisungen
- API: /api/send-update-emails?frequency=daily|weekly
- Test-Modus: &test=true
- Benutzer steuern via emailReportFrequency (none/daily/weekly)

E-Mail-Template-Updates (lib/email.ts):
- getEmailConfig() unterstützt jetzt 3 Typen (default/login/update)
- createTransporter() mit type-Parameter
- sendEmail() mit type-Parameter
- sendLoginNotificationEmail() hinzugefügt
- sendTaskUpdateEmail() hinzugefügt

Dokumentation:
- MAIL_CONFIGURATION.md: Vollständige Anleitung
- Setup-Guide für alle 3 E-Mail-Typen
- Cron-Job-Beispiele (Vercel, GitHub Actions, extern)
- Fehlerbehebung und Monitoring

Dateien:
- lib/email.ts: +150 Zeilen (Templates & Logik)
- lib/auth.ts: Login-Benachrichtigung im JWT Callback
- app/api/send-update-emails/route.ts: Neue API-Route
- .env.example: Template für Deployment
- MAIL_CONFIGURATION.md: Vollständige Dokumentation

--- a/nextjs_space/.env.example
+++ b/nextjs_space/.env.example
@@ -1,9 +1,32 @@
-# Database Connection
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
+DATABASE_URL=postgresql://user:password@host:5432/database
+NEXTAUTH_SECRET=your-secret-here
+AWS_PROFILE=your-profile
+AWS_REGION=us-west-2
+AWS_BUCKET_NAME=your-bucket
+AWS_FOLDER_PREFIX=your-prefix/
 
-# NextAuth Configuration
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
+# Ticket/Subtask-Benachrichtigungen
+SMTP_HOST=asmtp.mail.hostpoint.ch
+SMTP_PORT=587
+SMTP_USER=noreply@planbar.dev
+SMTP_PASSWORD=your-password-here
+SMTP_FROM=noreply@planbar.dev
 
-# Application
-NODE_ENV="development"
+# Login-Benachrichtigungen
+SMTP_LOGIN_HOST=asmtp.mail.hostpoint.ch
+SMTP_LOGIN_PORT=587
+SMTP_LOGIN_USER=noreply@planbar.dev
+SMTP_LOGIN_PASSWORD=your-password-here
+SMTP_LOGIN_FROM=noreply@planbar.dev
+
+# Update-E-Mails
+SMTP_UPDATE_HOST=asmtp.mail.hostpoint.ch
+SMTP_UPDATE_PORT=587
+SMTP_UPDATE_USER=update@planbar.dev
+SMTP_UPDATE_PASSWORD=your-password-here
+SMTP_UPDATE_FROM=update@planbar.dev
+
+# Firmenname und Design
+COMPANY_NAME=planbar
+PRIMARY_COLOR=#3b82f6
+NEXTAUTH_URL=http://localhost:3000
