Feature: Demo-E-Mail-Route für alle E-Mail-Typen
API-Route: /api/send-demo-emails
- Versendet alle 4 E-Mail-Typen an Test-Adresse
- Ticket-Benachrichtigung (noreply@planbar.dev)
- Subtask-Benachrichtigung (noreply@planbar.dev)
- Login-Benachrichtigung (noreply@planbar.dev via SMTP_LOGIN_*)
- Update-E-Mail (update@planbar.dev via SMTP_UPDATE_*)

Demo-Daten:
- Realistische Ticket/Task-Namen
- Deutsche Texte
- Zeitstempel und Benutzer-Namen
- Statistiken für Update-E-Mail

Response:
- Detaillierte Ergebnisse pro E-Mail-Typ
- Von-Adresse und Betreff für jede E-Mail
- Erfolgs-/Fehler-Zusammenfassung

Verwendung:
GET /api/send-demo-emails?to=ihre-email@example.com

--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,20 +1,23 @@
-DATABASE_URL="postgresql://neondb_owner:npg_xILHWw9iRt1h@ep-little-frost-ag0jov82-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-NEXTAUTH_SECRET="JZKYSvnnJ1nORLNZlbL5PHsOwzgk00Ln"
+DATABASE_URL='postgresql://neondb_owner:npg_xILHWw9iRt1h@ep-little-frost-ag0jov82-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+NEXTAUTH_SECRET=JZKYSvnnJ1nORLNZlbL5PHsOwzgk00Ln
 AWS_PROFILE=hosted_storage
 AWS_REGION=us-west-2
 AWS_BUCKET_NAME=abacusai-apps-16bc3ae7f4b9dc965e5c6688-us-west-2
 AWS_FOLDER_PREFIX=18111/
-
-# E-Mail-Benachrichtigungen (SMTP-Konfiguration)
-# Für Gmail: smtp.gmail.com, Port 587, App-Passwort verwenden
-# Für Outlook: smtp-mail.outlook.com, Port 587
-# Für andere: Eigenen SMTP-Server konfigurieren
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=asmtp.mail.hostpoint.ch
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM=your-email@gmail.com
-
-# Optional: Firmenname und Farben für E-Mail-Templates
+SMTP_USER=noreply@planbar.dev
+SMTP_PASSWORD='6ub!k!X.g*!FYh!'
+SMTP_FROM=noreply@planbar.dev
 COMPANY_NAME=planbar
-PRIMARY_COLOR=#3b82f6
+PRIMARY_COLOR='#3b82f6'
+SMTP_LOGIN_HOST=asmtp.mail.hostpoint.ch
+SMTP_LOGIN_PORT=587
+SMTP_LOGIN_USER=noreply@planbar.dev
+SMTP_LOGIN_PASSWORD=6ub!k!X.g*!FYh!
+SMTP_LOGIN_FROM=noreply@planbar.dev
+SMTP_UPDATE_HOST=asmtp.mail.hostpoint.ch
+SMTP_UPDATE_PORT=587
+SMTP_UPDATE_USER=update@planbar.dev
+SMTP_UPDATE_PASSWORD=i@8RAU9_v2Qoyu3
+SMTP_UPDATE_FROM=update@planbar.dev
