--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -48,14 +48,14 @@
     "@tanstack/react-query": "5.0.0",
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
-    "@types/nodemailer": "^7.0.4",
+    "@types/nodemailer": "^7.0.5",
     "autoprefixer": "10.4.15",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
     "cookie": "1.0.2",
-    "date-fns": "3.6.0",
+    "date-fns": "^3.6.0",
     "dotenv": "16.5.0",
     "embla-carousel-react": "8.3.0",
     "framer-motion": "10.18.0",
