--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ out
 .logs
 *.tsbuildinfo
 nextjs_space/yarn.lock
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+nextjs_space/.env
+nextjs_space/.env.local
