--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -35,7 +35,7 @@
     "@headlessui/react": "1.7.18",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "^6.0.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -96,7 +96,7 @@
     "nodemailer": "^6.10.1",
     "plotly.js": "2.35.3",
     "postcss": "8.4.30",
-    "prisma": "^6.7.0",
+    "prisma": "^6.0.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.3.0",
     "react-datepicker": "6.1.0",
