--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "cd nextjs_space && npm run build",
-  "outputDirectory": "nextjs_space/.next",
-  "installCommand": "cd nextjs_space && npm install",
+  "version": 2,
+  "rootDirectory": "nextjs_space",
   "framework": "nextjs"
 }
