Fix: Add regl resolution for yarn build

--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -127,5 +127,8 @@
     "> 0.5%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "resolutions": {
+    "regl": "npm:@plotly/regl@^2.1.2"
+  }
 }
