--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "version": 2,
-  "buildCommand": "cd nextjs_space && prisma generate && (prisma db push --accept-data-loss || true) && node scripts/setup-organizations.js && next build"
+  "buildCommand": "cd nextjs_space && prisma generate && (prisma db push --accept-data-loss || true) && next build"
 }
