--- a/nextjs_space/vercel.json
+++ b/nextjs_space/vercel.json
@@ -1,4 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate && (prisma db push --accept-data-loss || true) && next build"
+  "buildCommand": "prisma generate && (prisma db push --accept-data-loss || true) && next build",
+  "crons": [
+    {
+      "path": "/api/cron/moco-sync",
+      "schedule": "0 4 * * *"
+    }
+  ]
 }
